--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </label>
             </div>
             <div class="modal-checkbox">
-            <input class="checkbox-link visually-hidden" type="user-privacy" value="true" name="user-privacy">
+            <input class="checkbox-link visually-hidden" type="checkbox" value="true" name="user-privacy">
                 <label for="user-privacy" class="check-text">I accept the terms and conditions of the<span class="check-color">Privacy Policy</span>
             </label>
         </div>
