--- a/index.html
+++ b/index.html
@@ -406,7 +406,12 @@
             </div>
             <div class="modal-comment">
                 <label for="user-comment" class="modal-label">Comment
-                    <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                    <textarea 
+                    class="modal-form-comment" 
+                    name="user-comment" 
+                    id="user-comment" 
+                    placeholder="Text input">
+                </textarea>
                 </label>
             </div>
             <div class="modal-checkbox">
