--- a/index.html
+++ b/index.html
@@ -406,13 +406,15 @@
             </div>
             <div class="modal-comment">
                 <label for="user-comment" class="modal-label">Comment
-                    <textarea 
-                    class="modal-form-comment" 
-                    name="user-comment" 
-                    id="user-comment" 
-                    placeholder="Text input">
-                </textarea>
-                </label>
+                    <div class="user-modal">
+                        <textarea 
+                        class="modal-form-comment" 
+                        name="user-comment" 
+                        id="user-comment" 
+                        placeholder="Text input">
+                    </textarea>
+                    </label>
+                    </div>
             </div>
             <div class="modal-checkbox">
             <input class="checkbox-link visually-hidden" type="checkbox" value="true" name="user-privacy">
