--- a/index.html
+++ b/index.html
@@ -405,17 +405,16 @@
             </div>
             </div>
             <div class="modal-comment">
-                <label for="user-comment" class="modal-label">Comment
+                <label for="user-comment" class="modal-label">Comment</label>
                     <textarea 
                     class="modal-form-comment" 
                     name="user-comment" 
                     id="user-comment" 
                     placeholder="Text input">
                 </textarea>
-                </label>
             </div>
             <div class="modal-checkbox">
-            <input class="checkbox-link visually-hidden" type="checkbox" value="true" name="user-privacy">
+            <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
                 <label for="user-privacy" class="check-text">I accept the terms and conditions of the<span class="check-color">Privacy Policy</span>
             </label>
         </div>
