--- a/index.html
+++ b/index.html
@@ -415,7 +415,11 @@
             </div>
             <div class="modal-checkbox">
             <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
-                <label for="user-privacy" class="check-text">I accept the terms and conditions of the<span class="check-color">Privacy Policy</span>
+                <label for="user-privacy" class="check-text"> <span class="check-span">
+                <svg class="check-icon">
+                    <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+                </span>I accept the terms and conditions of the <a href="" class="link-policy"></a> Privacy Policy
             </label>
         </div>
         </form>
