--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <div class="modal-checkbox">
             <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
                 <label for="user-privacy" class="check-text"> <span class="check-span">
-                <svg class="check-icon">
+                <svg class="check-icon" width="10" height="10">
                     <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
                 </span>I accept the terms and conditions of the <a href="" class="link-policy"></a> Privacy Policy
