--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <svg class="check-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
-                </span>I accept the terms and conditions of the <a href="" class="link-policy"></a> Privacy Policy
+                </span>I accept the terms and conditions of the <a href="" class="link-policy">Privacy Policy</a> 
             </label>
         </div>
         </form>
