--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
                     <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
                 </span>I accept the terms and conditions of the <a href="" class="link-policy">Privacy Policy</a> 
+                <button type="button" class="check-btn"></button>
             </label>
         </div>
         </form>
