--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
                     <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
                 </span>I accept the terms and conditions of the <a href="" class="link-policy">Privacy Policy</a> 
-                <button type="button" class="check-btn"></button>
             </label>
+            <button type="submit" class="check-btn">Send</button>
         </div>
         </form>
     </div>
