--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </textarea>
             </div>
             <div class="modal-checkbox">
-            <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
+            <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy" checked>
                 <label for="user-privacy" class="check-text"> <span class="check-span">
                 <svg class="check-icon" width="10" height="8">
                     <use href="./images/icons.svg#icon-checkbox"></use>
