--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 </svg>
                 </span>I accept the terms and conditions of the <a href="" class="link-policy">Privacy Policy</a> 
             </label>
-            <button type="submit" class="check-btn">Send</button>
+            <button type="submit" class="check-submit-btn">Send</button>
         </div>
         </form>
     </div>
