--- a/index.html
+++ b/index.html
@@ -330,43 +330,46 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="container footer-div">
-        <div class="footer-box">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
-        <div class="footer-box-second">
-            <p class="footer-box-text">Social media</p>
-            <ul class="footer-box-list">
-                <li class="footer-box-item">
-                    <a class="footer-box-link" href="">
-                    <svg class="footer-svg" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                    </a>
-                </li>
-                <li class="footer-box-item">
-                    <a class="footer-box-link" href="">
+    <div class="container">
+        <p class="footer-title">Subscribe</p>
+        <div class="container footer-div">
+            <div class="footer-box">
+                <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="footer-box-second">
+                <p class="footer-box-text">Social media</p>
+                <ul class="footer-box-list">
+                    <li class="footer-box-item">
+                        <a class="footer-box-link" href="">
                         <svg class="footer-svg" width="24" height="24">
-                            <use href="./images/icons.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
-                    </a>
-                </li>
-                <li class="footer-box-item">
-                    <a class="footer-box-link" href="">
-                        <svg class="footer-svg" width="24" height="24">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-box-item">
-                    <a class="footer-box-link" href="">
-                        <svg class="footer-svg" width="24" height="24">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                    </li>
+                    <li class="footer-box-item">
+                        <a class="footer-box-link" href="">
+                            <svg class="footer-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-box-item">
+                        <a class="footer-box-link" href="">
+                            <svg class="footer-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-box-item">
+                        <a class="footer-box-link" href="">
+                            <svg class="footer-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
