--- a/index.html
+++ b/index.html
@@ -330,8 +330,6 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="container">
-        <p class="footer-title">Subscribe</p>
         <div class="container footer-div">
             <div class="footer-box">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
@@ -370,8 +368,10 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-container">
+                <p class="footer-title">Subscribe</p>
+            </div>
         </div>
-    </div>
 </footer>
 <div class="modal-overlay">
     <div class="modal">
