--- a/index.html
+++ b/index.html
@@ -370,6 +370,11 @@
             </div>
             <div class="footer-container">
                 <p class="footer-title">Subscribe</p>
+                <form class="footer-form">
+                    <label for="" aria-label="email">
+                        <input type="email">
+                    </label>
+                </form>
             </div>
         </div>
 </footer>
