--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
             <div class="footer-container">
                 <p class="footer-title">Subscribe</p>
                 <form class="footer-form">
-                    <label for="" aria-label="email">
-                        <input type="email">
+                    <label class="footer-label" aria-label="email">
+                        <input class="input-footer-form" type="email">
                     </label>
                 </form>
             </div>
