--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <p class="footer-title">Subscribe</p>
                 <form class="footer-form">
                     <label class="footer-label" aria-label="email">
-                        <input class="input-footer-form" type="email">
+                        <input class="input-footer-form" type="text" name="email" placeholder="e-mail">
                     </label>
                 </form>
             </div>
