--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
                     <label class="footer-label" aria-label="email">
                         <input class="input-footer-form" type="email" name="text" placeholder="E-mail">
                     </label>
+                    <button type="submit" class="button-footer-form">Subscribe</button>
                 </form>
             </div>
         </div>
