--- a/index.html
+++ b/index.html
@@ -374,7 +374,11 @@
                     <label class="footer-label" aria-label="email">
                         <input class="input-footer-form" type="email" name="text" placeholder="E-mail">
                     </label>
-                    <button type="submit" class="button-footer-form">Subscribe</button>
+                    <button type="submit" class="button-footer-form">Subscribe
+                        <svg class="footer-form-svg">
+                            <use href="./images/icons.svg#"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
