--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                         <input class="input-footer-form" type="email" name="text" placeholder="E-mail">
                     </label>
                     <button type="submit" class="button-footer-form">Subscribe
-                        <svg class="footer-form-svg">
-                            <use href="./images/icons.svg#"></use>
+                        <svg class="footer-form-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
                 </form>
