--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <input class="checkbox-link visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy" checked>
                 <label for="user-privacy" class="check-text"> <span class="check-span">
                 <svg class="check-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-checkbox"></use>
+                    <use href="./images/icons.svg#icon-check"></use>
                 </svg>
                 </span>I accept the terms and conditions of the <a href="" class="link-policy">Privacy Policy</a> 
             </label>
