--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </address>
 </div>
 </header>
-<main>
+<!-- <main>
         <section class="section-one">
             <div class="container">
                 <h1 class="solutions-title">Effective Solutions for Your Business</h1>
@@ -328,8 +328,8 @@
             </ul>
         </div>
     </section>
-</main>
-<footer class="footer">
+</main> -->
+<!-- <footer class="footer">
         <div class="container footer-div">
             <div class="footer-box">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
@@ -382,8 +382,8 @@
                 </form>
             </div>
         </div>
-</footer>
-<div class="modal-overlay">
+</footer> -->
+<!-- <div class="modal-overlay">
     <div class="modal">
         <button type="button" class="modal-btn"><svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -438,6 +438,6 @@
         <button type="submit" class="check-submit-btn">Send</button>
         </form>
     </div>
-</div>
+</div> -->
 </body>
 </html>
