--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </address>
 </div>
 </header>
-<!-- <main>
+<main>
         <section class="section-one">
             <div class="container">
                 <h1 class="solutions-title">Effective Solutions for Your Business</h1>
@@ -328,8 +328,8 @@
             </ul>
         </div>
     </section>
-</main> -->
-<!-- <footer class="footer">
+</main>
+<footer class="footer">
         <div class="container footer-div">
             <div class="footer-box">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
@@ -382,7 +382,7 @@
                 </form>
             </div>
         </div>
-</footer> -->
+</footer>
 <!-- <div class="modal-overlay">
     <div class="modal">
         <button type="button" class="modal-btn"><svg class="modal-svg" width="8" height="8">
