--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </li>
                 <li class="qualities-items">
                     <div class="icon-block">
+                        srcset=""
                         <svg class="icon-adv" width="64" height="64">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
