--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                 </li>
             </ul>
         </address>
+        <button type="button"><svg>
+            <use href="./images/icons.svg#icon-closebtn"></use>
+        </svg></button>
 </div>
+<div></div>
 </header>
 <main>
         <section class="section-one">
