--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
                 </li>
             </ul>
         </address>
-        <button type="button"><svg>
+        <button type="button" class="menu-open-btn"><svg>
             <use href="./images/icons.svg#icon-closebtn"></use>
         </svg></button>
 </div>
-<div></div>
+<div class="mob-menu">
+<button type="button">
+    <svg class="check-icon" width="10" height="8"> <use href="./images/icons.svg#icon-check"></use>
+    </svg>
+</button>
+</div>
 </header>
 <main>
         <section class="section-one">
