--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
                 </li>
             </ul>
         </address>
-        <button type="button" class="menu-open-btn"><svg>
-            <use href="./images/icons.svg#icon-closebtn"></use>
-        </svg></button>
-</div>
+        <button type="button" class="open-menu-btn">
+            <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-closebtn"></use>
+            </svg>
+        </button>
+        </div>
 <div class="mob-menu">
-<button type="button">
-    <svg class="check-icon" width="10" height="8"> <use href="./images/icons.svg#icon-check"></use>
-    </svg>
-</button>
 </div>
 </header>
 <main>
