--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </button>
         </div>
 <div class="mob-menu">
+    <button type="button" class="close-menu-btn">
+        <svg width="8" height="8">
+            <use href="./images/icons.svg#icon-close-menu"></use>
+        </svg>
+    </button>
 </div>
 </header>
 <main>
