--- a/index.html
+++ b/index.html
@@ -51,10 +51,61 @@
         </div>
 <div class="mob-menu">
     <button type="button" class="close-menu-btn">
-        <svg width="8" height="8">
+        <svg width="24" height="24">
             <use href="./images/icons.svg#icon-close-menu"></use>
         </svg>
     </button>
+        <nav>
+            <ul class="mob-menu-list">
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link current" href="./index.html">Studio</a>
+                </li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="">Portfolio</a>
+                </li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="">Contacts</a>
+                </li>
+            </ul>
+            <ul class="mob-contact-list">
+                <li class="mob-contact">
+                    <a class="mob-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="mob-contact">
+                    <a class="mob-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="mob-network-list">
+            <li class="mob-item">
+                <a class="ourmob-link" href="">
+                    <svg class="our-mob-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-item">
+                <a class="our-mob-link" href="">
+                    <svg class="our-mob-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-item">
+                <a class="our-mob-link" href="">
+                    <svg class="our-mob-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-item">
+                <a class="our-mob-link" href="">
+                    <svg class="our-mob-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
 </div>
 </header>
 <main>
