--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </svg>
         </button>
         </div>
-<div class="mob-menu">
+<div class="mob-menu is-open">
     <button type="button" class="close-menu-btn">
         <svg width="24" height="24">
             <use href="./images/icons.svg#icon-close-menu"></use>
@@ -78,7 +78,7 @@
         </nav>
         <ul class="mob-network-list">
             <li class="mob-item">
-                <a class="ourmob-link" href="">
+                <a class="our-mob-link" href="">
                     <svg class="our-mob-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
