--- a/index.html
+++ b/index.html
@@ -50,32 +50,34 @@
         </button>
         </div>
 <div class="mob-menu is-open">
-    <button type="button" class="close-menu-btn">
-        <svg width="8" height="8">
-            <use href="./images/icons.svg#icon-close-menu"></use>
-        </svg>
-    </button>
-        <nav>
-            <ul class="mob-menu-list">
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link current" href="./index.html">Studio</a>
-                </li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="">Portfolio</a>
-                </li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="">Contacts</a>
-                </li>
-            </ul>
-            <ul class="mob-contact-list">
-                <li class="mob-contact">
-                    <a class="mob-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="mob-contact">
-                    <a class="mob-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </nav>
+    <div>
+        <button type="button" class="close-menu-btn">
+            <svg width="8" height="8">
+                <use href="./images/icons.svg#icon-close-menu"></use>
+            </svg>
+        </button>
+            <nav>
+                <ul class="mob-menu-list">
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link current" href="./index.html">Studio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link" href="">Portfolio</a>
+                    </li>
+                    <li class="mob-menu-item">
+                        <a class="mob-menu-link" href="">Contacts</a>
+                    </li>
+                </ul>
+                <ul class="mob-contact-list">
+                    <li class="mob-contact">
+                        <a class="mob-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="mob-contact">
+                        <a class="mob-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </nav>
+    </div>
         <ul class="mob-network-list">
             <li class="mob-item">
                 <a class="our-mob-link" href="">
