--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </svg>
         </button>
         </div>
-<div class="mob-menu is-open">
+<div class="mob-menu">
         <button type="button" class="close-menu-btn">
             <svg width="8" height="8">
                 <use href="./images/icons.svg#icon-close-menu"></use>
