--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             </div>
         </div>
 </footer>
-<!-- <div class="modal-overlay">
+<div class="modal-overlay">
     <div class="modal">
         <button type="button" class="modal-btn"><svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -548,6 +548,6 @@
         <button type="submit" class="check-submit-btn">Send</button>
         </form>
     </div>
-</div> -->
+</div>
 </body>
 </html>
