--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
                             <source srcset="./images/Portfolio1 , ./images/portfolio1-2x.jpg 2x" 
                             media="min-width: 320px" />
                         </picture>
-                        <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"
-                        />
+                            <img srcset="./images/portfolio1-2x.jpg 2x" src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360" />
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                         Cloud Storage App</p>
                     </div>
@@ -351,9 +350,8 @@
                             <source srcset="./images/Portfolio2 , ./images/portfolio2-2x.jpg 2x" media="min-width: 1158px" />
                             <source srcset="./images/Portfolio2 , ./images/portfolio2-2x.jpg 2x" media="min-width: 768px" />
                             <source srcset="./images/Portfolio2 , ./images/portfolio2-2x.jpg 2x" media="min-width: 320px" />
+                            <img srcset="./images/portfolio2-2x.jpg 2x" src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360" />
                         </picture>
-                        <img srcset="./images/portfolio2-2x.jpg 2x"
-                        src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                             Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -369,9 +367,8 @@
                             <source srcset="./images/Portfolio3 , ./images/portfolio3-2x.jpg 2x" media="min-width: 1158px" />
                             <source srcset="./images/Portfolio3 , ./images/portfolio3-2x.jpg 2x" media="min-width: 768px" />
                             <source srcset="./images/Portfolio3 , ./images/portfolio3-2x.jpg 2x" media="min-width: 320px" />
+                            <img srcset="./images/portfolio3-2x.jpg 2x" src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360" />
                         </picture>
-                        <img srcset="./images/portfolio3-2x.jpg 2x"
-                        src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                             Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -387,9 +384,8 @@
                             <source srcset="./images/Portfolio4 , ./images/portfolio4-2x.jpg 2x" media="min-width: 1158px" />
                             <source srcset="./images/Portfolio4 , ./images/portfolio4-2x.jpg 2x" media="min-width: 768px" />
                             <source srcset="./images/Portfolio4 , ./images/portfolio4-2x.jpg 2x" media="min-width: 320px" />
+                            <img srcset="./images/portfolio4-2x.jpg 2x" src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360" />
                         </picture>
-                        <img srcset="./images/portfolio4-2x.jpg 2x"
-                        src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                             Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -405,9 +401,8 @@
                             <source srcset="./images/Portfolio5 , ./images/portfolio5-2x.jpg 2x" media="min-width: 1158px" />
                             <source srcset="./images/Portfolio5 , ./images/portfolio5-2x.jpg 2x" media="min-width: 768px" />
                             <source srcset="./images/Portfolio5 , ./images/portfolio5-2x.jpg 2x" media="min-width: 320px" />
+                            <img srcset="./images/portfolio5-2x.jpg 2x" src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360" />
                         </picture>
-                        <img srcset="./images/portfolio5-2x.jpg 2x"
-                        src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                             Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
@@ -423,9 +418,8 @@
                             <source srcset="./images/Portfolio6 , ./images/portfolio6-2x.jpg 2x" media="min-width: 1158px" />
                             <source srcset="./images/Portfolio6 , ./images/portfolio6-2x.jpg 2x" media="min-width: 768px" />
                             <source srcset="./images/Portfolio6 , ./images/portfolio6-2x.jpg 2x" media="min-width: 320px" />
+                            <img srcset="./images/portfolio6-2x.jpg 2x" src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360" />
                         </picture>
-                        <img srcset="./images/portfolio6-2x.jpg 2x"
-                        src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
                         <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                             Exotic Fruit Ecommerce App ·
                             Cloud Storage App</p>
